2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add SIS/SISX packages, #10871.
	* update-mime-database.c: Add x-epoc media type.
	Thanks to Ville Skyttä <ville.skytta@iki.fi>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* Makefile.am: Install shared-mime-info.pc to $libdir/pkgconfig
	instead of $datadir/pkgconfig, #10698. Thanks to Tilman Sauerbeck
	<tilman@code-monkey.de>.
	* autogen.sh: Don't run libtoolize, #10870. Thanks to Ville Skyttä
	<ville.skytta@iki.fi>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add more WordPerfect globs, #10428. Thanks
	to Petr Mladek <pmladek@suse.cz>.
	Also replace "document" by "image" in EMF/WMF description.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Fix WMF description and add matchlet, add
	EMF MIME type. Fixes #11385 and 11388. Thanks to Shaun Oldale
	<soldale@gmail.com>.
	Also fix OpenOffice Calc template description.

2007-06-26  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add MP2 audio, add more aliases for 3GPP, fixes
	#10457. Thanks to Matt Keenan <matt.keenan@sun.com>.

2007-06-26  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add OpenOffice MIME matchlets, fixes #11276.
	Thanks to Matt Keenan <matt.keenan@sun.com>.

2007-06-14  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Match "script" tag in HTML. Fixes #11259.
	Thanks to David Faure <faure@kde.org>.

2007-06-14  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Fix word order in powerpoint matchlet. Fixes
	#435. Thanks to David Faure <faure@kde.org>.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Remove "application/x-netscape-bookmarks"
	definition, make "application/x-netscape-bookmarks" an alias for
	"application/x-mozilla-bookmarks". Also associate extensions "*.html"
	and "*.htm" with Mozilla bookmarks. Fixes #266.
